force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Approximate_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Monthly__c</fullName>
    <description>Approx monthly vaue of gift as per frequency</description>
    <formula>IF(ISPICKVAL(npe03__Installment_Period__c, &quot;Weekly&quot;),  npe03__Amount__c *4,
IF(ISPICKVAL(npe03__Installment_Period__c, &quot;Yearly&quot;),  npe03__Amount__c /12,
IF(ISPICKVAL(npe03__Installment_Period__c, &quot;Monthly&quot;), npe03__Amount__c,
NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approximate Monthly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>