force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>CASESAFEID( npe03__Contact__r.Id )</formula>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>