force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>