force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Current_FY_Donation_Totaal__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Donation_Totaal__c</fullName>
    <label>Current FY Donation Totaal</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>