force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Current_FY_Donaton_Total__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Donaton_Total__c</fullName>
    <label>Current FY Donaton Totaal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>