force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Donor_Mailing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Donor_Mailing_Postcode__c</fullName>
    <formula>IF(ISBLANK( npe03__Organization__c ), npe03__Contact__r.MailingPostalCode , npe03__Organization__r.BillingPostalCode )</formula>
    <label>Donor Mailing Postcode</label>
    <type>Text</type>
</CustomField>