force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Donor_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Donor_Mailing_State__c</fullName>
    <formula>IF(ISBLANK( npe03__Organization__c ), npe03__Contact__r.MailingState , npe03__Organization__r.BillingState )</formula>
    <label>Donor Mailing State</label>
    <type>Text</type>
</CustomField>