force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Donor_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Donor_Mailing_Street__c</fullName>
    <formula>IF( ISBLANK(npe03__Organization__c ), npe03__Contact__r.MailingStreet , npe03__Organization__r.BillingStreet )</formula>
    <label>Donor Mailing Street</label>
    <type>Text</type>
</CustomField>