force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Donor_Mailing_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Donor_Mailing_Suburb__c</fullName>
    <formula>IF(ISBLANK( npe03__Organization__c ), npe03__Contact__r.MailingCity , npe03__Organization__r.BillingCity )</formula>
    <label>Donor Mailing Suburb</label>
    <type>Text</type>
</CustomField>