force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Donor_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Donor_Salutation__c</fullName>
    <description>For organisations, &quot;Friends&quot;. For contacts it will use their first name. If the contact only has an first initial, then it will use Salutation + Surname, if we do not have a Salutation then &quot;Friend&quot;</description>
    <formula>IF( ISBLANK(npe03__Contact__c ),&quot;Friends&quot;,
IF( LEN(npe03__Contact__r.FirstName)&gt;1 ,npe03__Contact__r.FirstName,
IF( ISPICKVAL(npe03__Contact__r.Salutation,&quot;&quot;),  &quot;Friend&quot;,
TEXT(npe03__Contact__r.Salutation)+&quot; &quot;+ npe03__Contact__r.LastName )))</formula>
    <inlineHelpText>For organisations, &quot;Friends&quot;. For contacts it will use their first name. If the contact only has an first initial, then it will use Salutation + Surname, if we do not have a Salutation then &quot;Friend&quot;</inlineHelpText>
    <label>Donor Salutation</label>
    <type>Text</type>
</CustomField>