force-app/main/default/objects/npe03__Recurring_Donation__c/fields/First_Successful_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Successful_Gift_Date__c</fullName>
    <label>First Successful Gift Date</label>
    <type>DateTime</type>
</CustomField>