force-app/main/default/objects/npe03__Recurring_Donation__c/fields/https_stripe_com_docs_api_sigma_schedu__c.field-meta.xml
<CustomField>
    <fullName>https_stripe_com_docs_api_sigma_schedu__c</fullName>
    <description>What error message is shown in Stripe for this Payment Intent failure</description>
    <label>Last Invoice Payment Error Message</label>
    <length>99</length>
    <type>Text</type>
</CustomField>