force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Last_Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Declined_Date__c</fullName>
    <label>Last Declined Date</label>
    <type>Date</type>
</CustomField>