force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Last_Invoice_Payment_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Payment_Error_Code__c</fullName>
    <description>Reason for latest Stripe payment intent error</description>
    <label>Last Invoice Payment Error Code</label>
    <length>99</length>
    <type>Text</type>
</CustomField>