force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Last_Invoice_Payment_Error_Decline_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Payment_Error_Decline_Code__c</fullName>
    <description>https://stripe.com/docs/declines/codes</description>
    <label>Last Invoice Payment Error Decline Code</label>
    <length>99</length>
    <type>Text</type>
</CustomField>