force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Last_Invoice_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Payment_Status__c</fullName>
    <description>Last Invoice Payment Status on Stripes Payment Intent</description>
    <label>Last Invoice Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Requires Action</fullName>
            </value>
            <value>
                <fullName>Requires Capture</fullName>
            </value>
            <value>
                <fullName>Requires Confirmation</fullName>
            </value>
            <value>
                <fullName>Requires Payment Method</fullName>
            </value>
            <value>
                <fullName>Succeeded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>