force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Last_Invoice_Uncollectible_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Uncollectible_At__c</fullName>
    <description>Date/Time the invoice (Recurring Donation Payment) was deemed uncollectible.</description>
    <inlineHelpText>The Date&amp;Time the invoice (Recurring Donation Payment) was deemed uncollectible.</inlineHelpText>
    <label>Last Invoice Uncollectible At</label>
    <type>DateTime</type>
</CustomField>