force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Last_Successful_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Gift_Date__c</fullName>
    <label>Last Successful Gift Date</label>
    <type>DateTime</type>
</CustomField>