force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Last_Upgrade_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Upgrade_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a Last Upgrade Campaign lookup field that will exist from the legacy data model..</description>
    <inlineHelpText>This is a Last Upgrade Campaign lookup field that will exist from the legacy data model..</inlineHelpText>
    <label>Last Upgrade Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recurring Donations (Last Upgrade Campaign)</relationshipLabel>
    <relationshipName>Recurring_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>