force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Legacy_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_Number__c</fullName>
    <label>Legacy Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>