force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Legacy_Bambora_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Bambora_ID__c</fullName>
    <label>Legacy Bambora ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>