force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Legacy_BSB__c.field-meta.xml
<CustomField>
    <fullName>Legacy_BSB__c</fullName>
    <label>Legacy BSB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>