force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Legacy_Merchant_Facility__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Merchant_Facility__c</fullName>
    <label>Legacy Merchant Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>