force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Legacy_Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Payment_Form__c</fullName>
    <label>Legacy Payment Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>