force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Legacy_Recurring_Payment_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Recurring_Payment_Name__c</fullName>
    <label>Legacy Recurring Payment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>