force-app/main/default/objects/npe03__Recurring_Donation__c/fields/New_Text_Field_RG__c.field-meta.xml
<CustomField>
    <fullName>New_Text_Field_RG__c</fullName>
    <description>weeeeeeeeeeeeee4333</description>
    <label>New Text Field RG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>