force-app/main/default/objects/npe03__Recurring_Donation__c/fields/No_Of_Payments_Excl_Refunds__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Payments_Excl_Refunds__c</fullName>
    <label>No. Of Payments (Excl. Refunds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>