force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Previous_RG_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_RG_Amount__c</fullName>
    <description>What amount did this contact previously donate with their recurring donation?</description>
    <inlineHelpText>What amount did this contact previously donate with their recurring donation?</inlineHelpText>
    <label>Previous RG Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>