force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Previous_RG_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Previous_RG_Campaign__c</fullName>
    <label>Previous RG Campaign</label>
    <length>99</length>
    <type>Text</type>
</CustomField>