force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Reactivated_Regular_Giver__c.field-meta.xml
<CustomField>
    <fullName>Reactivated_Regular_Giver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this contact had a recurring donation before? 
Have they reactivated??</description>
    <inlineHelpText>Has this contact had a recurring donation before?</inlineHelpText>
    <label>Reactivated Regular Giver?</label>
    <type>Checkbox</type>
</CustomField>