force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What campaign did they previously give to on their last recurring donation?</description>
    <label>Prevous Recurring Donation Campaign</label>
    <referenceTo>npe03__Recurring_Donation__c</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>Recurring_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>