force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_Date__c</fullName>
    <label>Status Changed Date</label>
    <type>Date</type>
</CustomField>