force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Stripe_Customer_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_External_Id__c</fullName>
    <formula>npsp_plus__Stripe_Subscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Customer External Id</label>
    <type>Text</type>
</CustomField>