force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Stripe_Initial_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Initial_Payment_Date__c</fullName>
    <formula>IF(
OR(ISPICKVAL(npsp__Day_of_Month__c, &quot;1&quot;), ISPICKVAL(npsp__Day_of_Month__c, &quot;15&quot;)),
DATE(YEAR(TODAY()), MONTH(TODAY()) + 1, VALUE(TEXT(npsp__Day_of_Month__c))),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Initial Payment Date</label>
    <type>Date</type>
</CustomField>