force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Stripe_Last_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Last_Invoice_Status__c</fullName>
    <description>The status of the last invoice (payment connected to this Recurring Donation) in Stripe</description>
    <label>Stripe Last Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Uncollectible</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>