force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Stripe_Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Status__c</fullName>
    <description>Recurring Donation Subscription status within Stripe</description>
    <label>Stripe Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Incomplete Expired</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Trialing</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>