force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/Campaign_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Id !=&quot;2F0052x0000031jMz&quot;&amp;&amp;
 ISBLANK(npe03__Recurring_Donation_Campaign__c )</errorConditionFormula>
    <errorDisplayField>npe03__Recurring_Donation_Campaign__c</errorDisplayField>
    <errorMessage>A Campaign is required for all regular gifts</errorMessage>
</ValidationRule>