force-app/main/default/objects/npe03__Recurring_Donation__c/listViews/Active_Recurring_Donatiosn.listView-meta.xml
<ListView>
    <fullName>Active_Recurring_Donatiosn</fullName>
    <columns>NAME</columns>
    <columns>npe03__Last_Payment_Date__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>npsp__StartDate__c</columns>
    <columns>npsp__Status__c</columns>
    <columns>npsp_plus__Stripe_Subscription__c</columns>
    <columns>Stripe_Initial_Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Recurring Donatiosn</label>
</ListView>