force-app/main/default/objects/npe03__Recurring_Donation__c/listViews/All_Recurring_Donations.listView-meta.xml
<ListView>
    <fullName>All_Recurring_Donations</fullName>
    <columns>NAME</columns>
    <columns>npe03__Contact__c</columns>
    <columns>npe03__Amount__c</columns>
    <columns>npe03__Recurring_Donation_Campaign__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>npsp__Status__c</columns>
    <columns>npe03__Last_Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__Status__c</field>
        <operation>equals</operation>
        <value>Lapsed,Closed,Paused,Active</value>
    </filters>
    <label>All Recurring Donations</label>
</ListView>